--- a/invoice_management/views/views.xml
+++ b/invoice_management/views/views.xml
@@ -276,8 +276,9 @@
     <record id="seq_clinic_insurance_invoice" model="ir.sequence">
         <field name="name">Insurance Invoice</field>
         <field name="code">clinic.invoice.insurance</field>
-        <field name="prefix">INS/%(year)s/</field>
+        <field name="prefix">IIS</field>
         <field name="padding">4</field>
+        <field name="company_id" eval="False"/>
     </record>
 
     <!-- List View -->
