--- a/prescription-management/views/views.xml
+++ b/prescription-management/views/views.xml
@@ -93,23 +93,47 @@
         </field>
     </record>
 
+    <record id="view_pharmacy_product_list" model="ir.ui.view">
+        <field name="name">pharmacy.product.list</field>
+        <field name="model">pharmacy.product</field>
+        <field name="arch" type="xml">
+            <list>
+                <field name="code"/>
+                <field name="name"/>
+                <field name="quantity"/>
+                <field name="uom_id"/>
+                <field name="purchase_price"/>
+                <field name="unit_price"/>
+                <field name="profit_margin"/>
+            </list>
+        </field>
+    </record>
+
     <record id="view_pharmacy_product_form" model="ir.ui.view">
         <field name="name">pharmacy.product.form</field>
         <field name="model">pharmacy.product</field>
         <field name="arch" type="xml">
-            <form string="Pharmacy Product">
+            <form>
                 <sheet>
                     <group>
-                        <field name="name"/>
-                        <field name="code"/>
-                        <field name="category"/>
-                        <field name="manufacturer"/>
-                        <field name="unit_price"/>
-                        <field name="quantity" readonly="1"/>
-                        <field name="description"/>
-                        <field name="date"/>
-                        <field name="expiry"/>
+                        <group>
+                            <field name="code"/>
+                            <field name="name"/>
+                            <field name="quantity"/>
+                            <field name="uom_id"/>
+                        </group>
+                        <group>
+                            <field name="purchase_price"/>
+                            <field name="unit_price"/>
+                            <field name="profit_margin"/>
+                            <field name="active"/>
+                        </group>
                     </group>
+                    <notebook>
+                        <page string="Mô tả">
+                            <field name="description"/>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
@@ -122,45 +146,5 @@
     </record>
 
     <menuitem id="menu_pharmacy_products" name="Kho dược phẩm" parent="menu_pharmacy_root" action="action_pharmacy_product" sequence="10"/>
-
-    <!-- Menu Stock Moves -->
-    <record id="view_pharmacy_stock_move_list" model="ir.ui.view">
-        <field name="name">pharmacy.stock.move.list</field>
-        <field name="model">pharmacy.stock.move</field>
-        <field name="arch" type="xml">
-            <list string="Stock Moves">
-                <field name="product_id"/>
-                <field name="move_type"/>
-                <field name="quantity"/>
-                <field name="date"/>
-            </list>
-        </field>
-    </record>
-
-    <record id="view_pharmacy_stock_move_form" model="ir.ui.view">
-        <field name="name">pharmacy.stock.move.form</field>
-        <field name="model">pharmacy.stock.move</field>
-        <field name="arch" type="xml">
-            <form string="Stock Move">
-                <sheet>
-                    <group>
-                        <field name="product_id"/>
-                        <field name="move_type"/>
-                        <field name="quantity"/>
-                        <field name="date"/>
-                        <field name="note"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record id="action_pharmacy_stock_move" model="ir.actions.act_window">
-        <field name="name">Phiếu nhập/xuất dược phẩm</field>
-        <field name="res_model">pharmacy.stock.move</field>
-        <field name="view_mode">list,form</field>
-    </record>
-
-    <menuitem id="menu_pharmacy_stock_moves" name="Phiếu nhập/xuất dược phẩm" parent="menu_pharmacy_root" action="action_pharmacy_stock_move" sequence="20"/>
 
 </odoo>
