--- a/insurance_management/views/views.xml
+++ b/insurance_management/views/views.xml
@@ -5,13 +5,14 @@
         <field name="name">clinic.insurance.policy.list</field>
         <field name="model">clinic.insurance.policy</field>
         <field name="arch" type="xml">
-            <list default_order="insurance_number">
+            <list>
+                <field name="insurance_id"/>
                 <field name="patient_id"/>
-                <field name="insurance_number"/>
-                <field name="insurance_initial_facility"/>
-                <field name="insurance_tier"/>
-                <field name="insurance_expiry_date"/>
-                <field name="insurance_state"/>
+                <field name="number"/>
+                <field name="facility"/>
+                <field name="tier"/>
+                <field name="expiry_date"/>
+                <field name="state"/>
             </list>
         </field>
     </record>
@@ -25,20 +26,21 @@
                 <sheet>
                     <div class="oe_title">
                         <h1>
-                            <field name="insurance_number" placeholder="Số thẻ BHYT"/>
+                            <field name="number" placeholder="Số thẻ BHYT"/>
                         </h1>
                     </div>
-                    <group name="patient_info" string="Thông tin bệnh nhân">
-                        <field name="patient_id" 
-                               domain="[('insurance_policy_id', '=', False)]" 
-                               options="{'no_create': True, 'no_open': True}" 
-                               placeholder="Chọn bệnh nhân"/>
-                    </group>
-                    <group name="insurance_info" string="Thông tin bảo hiểm">
-                        <field name="insurance_initial_facility" placeholder="Nơi ĐKKCB"/>
-                        <field name="insurance_tier" widget="radio" placeholder="Tuyến"/>
-                        <field name="insurance_expiry_date" placeholder="Thời hạn"/>
-                        <field name="insurance_state" readonly="1" widget="statusbar"/>
+                    <group>
+                        <group name="patient_info" string="Thông tin bệnh nhân">
+                            <field name="patient_id" 
+                                   domain="[('has_insurance', '=', False)]"
+                                   options="{'no_create': True, 'no_open': True}"/>
+                        </group>
+                        <group name="insurance_info" string="Thông tin bảo hiểm">
+                            <field name="facility" placeholder="Nơi ĐKKCB"/>
+                            <field name="tier" widget="radio" placeholder="Tuyến"/>
+                            <field name="expiry_date" placeholder="Thời hạn"/>
+                            <field name="state" readonly="1" widget="statusbar"/>
+                        </group>
                     </group>
                 </sheet>
             </form>
