--- a/patient_management/views/views.xml
+++ b/patient_management/views/views.xml
@@ -1,61 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <data noupdate="1">
+        <record id="sequence_patient_code" model="ir.sequence">
+            <field name="name">Patient Code Sequence</field>
+            <field name="code">clinic.patient.sequence</field>
+            <field name="prefix">P-</field>
+            <field name="padding">4</field>
+            <field name="company_id" eval="False"/>
+        </record>
+    </data>
     <!-- List View cho clinic.patient -->
     <record id="view_clinic_patient_list" model="ir.ui.view">
         <field name="name">clinic.patient.list</field>
         <field name="model">clinic.patient</field>
         <field name="arch" type="xml">
             <list>
+                <field name="patient_id"/>
                 <field name="name"/>
                 <field name="gender"/>
                 <field name="phone"/>
                 <field name="patient_type"/>
-                <field name="insurance_status" string="Có BHYT" readonly="1"/>
                 <field name="state"/>
             </list>
         </field>
     </record>
-
+    <!-- Form View cho clinic.patient -->
     <record id="view_clinic_patient_form" model="ir.ui.view">
         <field name="name">clinic.patient.form</field>
         <field name="model">clinic.patient</field>
         <field name="arch" type="xml">
             <form>
-                <header>
-                    <button name="action_add_insurance" type="object" string="Thêm bảo hiểm y tế"
-                            class="oe_highlight"/>
-                </header>
                 <sheet>
-                    <group name="personal_info" string="Thông tin cá nhân">
-                        <field name="name"/>
-                        <field name="date_of_birth"/>
-                        <field name="age"/>
-                        <field name="gender"/>
-                        <field name="phone"/>
-                        <field name="address"/>
-                        <field name="patient_type"/>
-                        <field name="state"/>
-                        <field name="last_activity_date" invisible="1"/>
-                        <field name="note"/>
-                    </group>
-                    <group name="insurance_info" string="Thông tin bảo hiểm">
-                        <field name="insurance_number" readonly="1"/>
-                        <field name="initial_facility" readonly="1"/>
-                        <field name="tier" readonly="1"/>
-                        <field name="expiry_date" readonly="1"/>
-                        <field name="has_valid_insurance" readonly="1"/>
-                    </group>
+                    <notebook>
+                        <page string="Thông tin bệnh nhân">
+                            <div class="oe_title" invisible="1">
+                                <h1>
+                                    <field name="patient_id" readonly="1"/>
+                                </h1>
+                            </div>
+                            <group>
+                                <field name="name"/>
+                                <field name="date_of_birth"/>
+                                <field name="age"/>
+                                <field name="gender"/>
+                                <field name="phone"/>
+                                <field name="email"/>
+                                <field name="address"/>
+                                <field name="patient_type"/>
+                                <field name="state"/>
+                                <field name="note"/>
+                            </group>
+                        </page>
+                        <page string="Thông tin bảo hiểm y tế">
+                            <group>
+                                <field name="has_insurance"/>
+                                <field name="insurance_id" readonly="1" invisible="not has_insurance"/>
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
     </record>
-    <!-- Action và Menu -->
+    <!-- Action -->
     <record id="action_clinic_patient" model="ir.actions.act_window">
         <field name="name">Quản lý bệnh nhân</field>
         <field name="res_model">clinic.patient</field>
         <field name="view_mode">list,form</field>
     </record>
-
+    <!-- Menu -->
     <menuitem id="menu_root" name="Quản lý bệnh nhân" action="action_clinic_patient" sequence="10"/>
 </odoo>
 
