--- a/insurance_management/views/views.xml
+++ b/insurance_management/views/views.xml
@@ -1,53 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- List View cho clinic.insurance.policy -->
+    <!-- List View -->
     <record id="view_clinic_insurance_policy_list" model="ir.ui.view">
         <field name="name">clinic.insurance.policy.list</field>
         <field name="model">clinic.insurance.policy</field>
         <field name="arch" type="xml">
             <list>
-                <field name="insurance_id"/>
-                <field name="patient_id"/>
                 <field name="number"/>
                 <field name="facility"/>
                 <field name="tier"/>
-                <field name="expiry_date"/>
-                <field name="state"/>
+                <field name="patient_id"/>
             </list>
         </field>
     </record>
 
-    <!-- Form View cho clinic.insurance.policy -->
+    <!-- Form View -->
     <record id="view_clinic_insurance_policy_form" model="ir.ui.view">
         <field name="name">clinic.insurance.policy.form</field>
         <field name="model">clinic.insurance.policy</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <div class="oe_title">
-                        <h1>
-                            <field name="number" placeholder="Số thẻ BHYT"/>
-                        </h1>
-                    </div>
                     <group>
-                        <group name="patient_info" string="Thông tin bệnh nhân">
-                            <field name="patient_id" 
-                                   domain="[('has_insurance', '=', False)]"
-                                   options="{'no_create': True, 'no_open': True}"/>
-                        </group>
-                        <group name="insurance_info" string="Thông tin bảo hiểm">
-                            <field name="facility" placeholder="Nơi ĐKKCB"/>
-                            <field name="tier" widget="radio" placeholder="Tuyến"/>
-                            <field name="expiry_date" placeholder="Thời hạn"/>
-                            <field name="state" readonly="1" widget="statusbar"/>
-                        </group>
+                        <field name="number"/>
+                        <field name="facility"/>
+                        <field name="tier"/>
+                        <field name="patient_id"/>
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <!-- Action để truy cập danh sách bảo hiểm -->
+    <!-- Action -->
     <record id="action_clinic_insurance_policy" model="ir.actions.act_window">
         <field name="name">Quản lý bảo hiểm y tế</field>
         <field name="res_model">clinic.insurance.policy</field>
@@ -55,6 +40,8 @@
     </record>
 
     <!-- Menu -->
-    <menuitem id="menu_insurance_root" name="Quản lý bảo hiểm y tế" 
-              action="action_clinic_insurance_policy" sequence="10"/>
+    <menuitem id="menu_insurance_root" 
+              name="Quản lý bảo hiểm y tế" 
+              action="action_clinic_insurance_policy" 
+              sequence="10"/>
 </odoo>
