--- a/patient_management/views/views.xml
+++ b/patient_management/views/views.xml
@@ -15,8 +15,8 @@
         <field name="model">clinic.patient</field>
         <field name="arch" type="xml">
             <list>
-                <field name="patient_id"/>
                 <field name="name"/>
+                <field name="patient_name"/>
                 <field name="gender"/>
                 <field name="phone"/>
                 <field name="patient_type"/>
@@ -31,15 +31,15 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div class="oe_title" invisible="1">
+                        <h1>
+                            <field name="name" readonly="1"/>
+                        </h1>
+                    </div>
                     <notebook>
                         <page string="Thông tin bệnh nhân">
-                            <div class="oe_title" invisible="1">
-                                <h1>
-                                    <field name="patient_id" readonly="1"/>
-                                </h1>
-                            </div>
                             <group>
-                                <field name="name"/>
+                                <field name="patient_name"/>
                                 <field name="date_of_birth"/>
                                 <field name="age"/>
                                 <field name="gender"/>
