--- a/insurance_management/views/views.xml
+++ b/insurance_management/views/views.xml
@@ -12,6 +12,8 @@
                 <field name="facility"/>
                 <field name="tier"/>
                 <field name="expiry_date"/>
+                <field name="state" decoration-danger="state == 'expired'" 
+                                  decoration-success="state == 'valid'"/>
             </list>
         </field>
     </record>
@@ -25,18 +27,19 @@
                 <sheet>
                     <div class="oe_title" invisible="1">
                         <h1>
-                            <field name="name" readonly="1"/>
+                            <field name="name" readonly="1" invisible="name == 'New'"/>
                         </h1>
                     </div>
                     <group>
                         <group>
-                            <field name="number"/>
+                            <field name="number" placeholder="Ví dụ: DN119123456789"/>
                             <field name="patient_id"/>
                             <field name="facility"/>
                         </group>
                         <group>
                             <field name="tier"/>
                             <field name="expiry_date"/>
+                            <field name="state" widget="statusbar" statusbar_visible="valid,expired"/>
                         </group>
                     </group>
                 </sheet>
