--- a/patient_management/views/views.xml
+++ b/patient_management/views/views.xml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <data noupdate="1">
-        <record id="sequence_patient_code" model="ir.sequence">
-            <field name="name">Patient Code Sequence</field>
-            <field name="code">clinic.patient.sequence</field>
-            <field name="prefix">P-</field>
-            <field name="padding">4</field>
-            <field name="company_id" eval="False"/>
-        </record>
-    </data>
     <!-- List View cho clinic.patient -->
     <record id="view_clinic_patient_list" model="ir.ui.view">
         <field name="name">clinic.patient.list</field>
         <field name="model">clinic.patient</field>
         <field name="arch" type="xml">
             <list>
-                <field name="name"/>
                 <field name="patient_name"/>
                 <field name="gender"/>
                 <field name="phone"/>
@@ -31,11 +21,6 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <div class="oe_title" invisible="1">
-                        <h1>
-                            <field name="name" readonly="1"/>
-                        </h1>
-                    </div>
                     <notebook>
                         <page string="Thông tin bệnh nhân">
                             <group>
@@ -52,6 +37,14 @@
                             </group>
                         </page>
                         <page string="Thông tin bảo hiểm y tế">
+                            <group>
+                            </group>
+                        </page>
+                        <page string="Lịch sử khám bệnh">
+                            <group>
+                            </group>
+                        </page>
+                        <page string="Thông tin nhập viện">
                             <group>
                             </group>
                         </page>
