--- a/healthcare_management/views/appointment_reminder_views.xml
+++ b/healthcare_management/views/appointment_reminder_views.xml
@@ -21,7 +21,7 @@
                     </div>
                     <group>
                         <group>
-                            <field name="id"/>
+                            <field name="note"/>
                             <field name="patient_name"/>
                         </group>
                         <group>
